--- a/style.css
+++ b/style.css
@@ -1,110 +1,159 @@
-*{
-    margin: 0;
-    padding: 0;
-    font-family: 'Inter', sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Inter", sans-serif;
 }
 
 /* navbar */
 
 nav {
-    display: flex;
-    justify-content: space-between;
-    padding: 18px 80px;
+  display: flex;
+  justify-content: space-between;
+  padding: 18px 80px;
 }
 
-.paytm-logo{
-    width: 180px;
-    height: 56px;
+.paytm-logo {
+  width: 180px;
+  height: 56px;
 }
 
-.nav-list{
-    display: flex;
-    width: 55%;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 1.05rem;
-    font-weight: 600;
+.nav-list {
+  display: flex;
+  width: 55%;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 1.05rem;
+  font-weight: 600;
 }
 
-.sign-in-button{
-    background-color: #00BAF2;
-    color: #fff;
-    width: 90px;
-    height: 28px;
-    border-radius: 25px;
-    position: relative;
-    padding-left:20px;
-    padding-top:11px ;
-    top: 10px;
-    font-weight: 600;
-
+.sign-in-button {
+  background-color: #00baf2;
+  color: #fff;
+  width: 90px;
+  height: 28px;
+  border-radius: 25px;
+  position: relative;
+  padding-left: 20px;
+  padding-top: 11px;
+  top: 10px;
+  font-weight: 600;
 }
 
-.user-logo{
-    position: absolute;
-    right: 2px;
-    bottom: 3px;
+.user-logo {
+  position: absolute;
+  right: 2px;
+  bottom: 3px;
 }
-
-
 
 /*gutter*/
-.gutter{
-    
-     background-color: #ECEEF0; 
-    text-align: center;
-    font-size: 0.9rem;
-    padding: 13px 0;
-    font-weight: 500;
+.gutter {
+  background-color: #eceef0;
+  text-align: center;
+  font-size: 0.9rem;
+  padding: 13px 0;
+  font-weight: 500;
 }
 
 /* hero */
 
+.hero-left {
+  float: left;
+  width: 35%;
 
-.hero-left{
-    float: left;
-    width: 35%;
-    
-    margin:125px 0 0 138px ;
+  margin: 125px 0 0 138px;
 }
-.paytm-block{
-    width: 80px;
-    box-shadow: 0 0 10px #f4f3f3;
-    border-radius: 12px;
+.paytm-block {
+  width: 80px;
+  box-shadow: 0 0 10px #f4f3f3;
+  border-radius: 12px;
 }
-h1{
-
-    margin: 40px 0 20px;
-    font-size: 3.35rem;
-    font-weight: 700;
-    
+h1 {
+  margin: 40px 0 20px;
+  font-size: 3.35rem;
+  font-weight: 700;
 }
-.hero-left p{
-    width: 90%;
-    font-size: 1.25rem;
-    font-weight: 500;
-    line-height: 28px;
+.hero-left p {
+  width: 90%;
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 28px;
 }
 
-.hero-right{
-    float: right;
-    height: 500px;
-    margin-top: 120px;
+.hero-right {
+  float: right;
+  height: 500px;
+  margin-top: 120px;
 }
 
-.download{
-    display: inline-block;
-    border-radius: 25px;
-    background-color: #000;
-    color: #fff;
-    font-size: 1rem;
-    font-weight: 500;
-    padding: 14px 25px;
-    margin-top: 40px;
+.download {
+  display: inline-block;
+  border-radius: 25px;
+  background-color: #000;
+  color: #fff;
+  font-size: 1rem;
+  font-weight: 500;
+  padding: 14px 25px;
+  margin-top: 40px;
 }
-i{
-    font-size: 17px;
+i {
+  font-size: 17px;
 }
-.fa-apple{
-    margin: 0 6px;
+.fa-apple {
+  margin: 0 6px;
+}
+
+/* services */
+.up {
+  background-color: #00baf2;
+  margin-top: 710px;
+  color: #fff;
+  padding: 70px 140px;
+}
+.services h2 {
+  font-size: 35px;
+  margin-bottom: 33px;
+}
+.cards {
+  display: flex;
+  justify-content: space-between;
+}
+.cards card {
+  width: 150px;
+  height: 180px;
+  border-radius: 10px;
+  padding: 15px 0 0 15px;
+}
+.cards img {
+  width: 60px;
+  margin-bottom: 20px;
+}
+.cards h3 {
+  width: 60px;
+}
+#broad h3 {
+  width: 100px;
+}
+.up h3 {
+  font-size: 15px;
+  font-weight: 500;
+}
+.cards span {
+  margin-left: 8px;
+  font-weight: 400;
+}
+/* for the two mis-positioned arrow head */
+#s1 {
+  position: relative;
+  bottom: 18px;
+  left: 50px;
+}
+#s2 {
+  position: relative;
+  bottom: 18px;
+  left: 80px;
+}
+.down {
+  background-color: #002970;
+  padding: 80px 150px;
+  color: #fff;
 }
